--- a/style.css
+++ b/style.css
@@ -14,3 +14,27 @@ h1 {
 section {
     display: flex;
 }
+
+.half-width {
+    width: 50%;
+    padding-left: 5%;
+}
+
+.half-width {
+    width: 80%;
+}
+
+img {
+    height: 600px;
+}
+
+.link-button {
+    text-decoration: none;
+    background-image: linear-gradient(brown, pink);
+    color: white;
+    font-weight: 800;
+    font-size: 20px;
+    padding: 10px 40px;
+    border-radius: 6px;
+
+}
