--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 
 h1 {
@@ -20,6 +21,9 @@ section {
     padding-left: 5%;
 }
 
+
+
+
 .half-width {
     width: 80%;
 }
@@ -36,5 +40,11 @@ img {
     font-size: 20px;
     padding: 10px 40px;
     border-radius: 6px;
+
+}
+
+.top-banner {
+    background-image: url(top-banner.png);
+    background-repeat: no-repeat;
 
 }
