--- a/style.css
+++ b/style.css
@@ -4,15 +4,20 @@ body {
 }
 
 h1 {
-    font-size: 50px;
+    font-size: 40px;
+}
+
+.welcome {
+    font-size: 60px;
 }
 
 .color {
+    font-size: 50px;
     color: orange;
 }
 
 
-section {
+.flexible-container {
     display: flex;
     margin-bottom: 50px;
 }
@@ -20,13 +25,6 @@ section {
 .half-width {
     width: 50%;
     padding-left: 5%;
-}
-
-
-
-
-.half-width {
-    width: 80%;
 }
 
 img {
@@ -54,4 +52,36 @@ img {
     background-image: url(dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.expo-area {
+    background-image: url(exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.expo {
+    width: 40%;
+    margin-left: 5%;
+    margin-left: 5%;
+    box-shadow: 10px 10px 40px gray;
+    padding-left: 30px;
+    border-radius: 20px;
+}
+
+#full-stack {
+    border-left: 7px solid tomato;
+}
+
+#baby-web {
+    border-left: 7px solid blue;
+}
+
+
+.oranged {
+    color: orange;
+}
+
+footer p {
+    text-align: center;
 }
